k3s/manifests/network-policies/zabbix/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress-zabbix
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: postgresql
      app.kubernetes.io/instance: zabbix
      app.kubernetes.io/name: zabbix
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: zabbix
      ports:
        - protocol: TCP
          port: 5432
