k3s/manifests/network-policies/zabbix/zabbix-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zabbix-egress-zabbix
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zabbix
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: postgresql
              app.kubernetes.io/instance: zabbix
              app.kubernetes.io/name: zabbix
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: server
              app.kubernetes.io/instance: zabbix
              app.kubernetes.io/name: zabbix
      ports:
        - protocol: TCP
          port: 10051
