k3s/manifests/network-policies/zabbix/zabbix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zabbix-ingress-zabbix
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zabbix
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 8080
